--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ drift.load('2vkhwrmhydm7');
         </div>
     </nav>
     <!---Slider section --->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <section class="slider text-center" id="slider">
        <div class="slider-overlay">
            <div class="slider-content">
